[v8] Fix an erroneous WrapperGrouper call in preparation for refactoring https://bugs.webkit.org/show_bug.cgi?id=110396

Reviewed by Kentaro Hara.

This is in preparation for a refactor to expose a simplified
WrapperGrouper interface to V8 wrapper classes enabling them to
specify multiple roots per wrapper object.

* bindings/v8/V8GCController.cpp: Since MutationObservers are not Nodes, the correct call here is addObjectToGroup, as it is for all other non-Node wrappers.


Canonical link: https://commits.webkit.org/128683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143526 268f45cc-cd09-0410-ab3c-d52691b4dbfc